feat: Remove wishlist and add connection check - Remove wishlist functionality from app and admin - Add connection check screen for offline state - Implement connection monitoring and auto-reconnect

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         <div id="cart-page" class="page"></div>
         <div id="profile-page" class="page"></div>
         <div id="product-page" class="page"></div>
-        <div id="wishlist-page" class="page"></div>
         <div id="delivery-page" class="page"></div>
         <div id="login-page" class="page"></div>
         <div id="signup-page" class="page"></div>
     </div>
 
     <!-- Scripts -->
+    <script src="js/connection.js"></script>
     <script src="js/data.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
