--- a/admin/admin.html
+++ b/admin/admin.html
@@ -220,6 +220,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
+    <script src="../js/connection.js"></script>
     <script src="js/data.js"></script>
     <script src="js/admin.js"></script>
 </body>
